# personalconfig

./: .Xresources  .emacs  .fonts.conf  .gitconfig  .profile  .tcshrc  .tmux.conf  .vimrc  .xmobarrc  .xsession  README.md  freshclam.conf  saint_config.h  xmonad.hs
.xmonad/: build  xmonad.cabal  xmonad.hs
