cabal-version: 2.4
name:          xmonad-vvx
version:       0.1.0.42
synopsis:      me'oi .XMONAD. co'e je cu se pilno la .varik. .VALefor.
bug-reports:   http://github.com/varikvalefor/matel/issues
license:       Unlicense
author:        la .varik. .VALefor.
maintainer:    varikvalefor@aol.com
copyright:     (c) Varik Valefor 2023.
category:      Chat

executable xmonad
  main-is: xmonad.hs
  ghc-options: -haddock -threaded -O2 -dynamic
  other-modules:
  build-depends:
    base >= 4.14.1.0 && < 4.18,
    xmonad,
    xmonad-contrib
  default-language: Haskell2010
